overFlow Fixed

--- a/Style.css
+++ b/Style.css
@@ -18,7 +18,7 @@ nav {
     position: fixed;
     color: white;
     z-index: 1;
-
+    overflow: hidden;
 
 }
 
@@ -97,6 +97,7 @@ nav {
     background-color: #232328;
     width: 100%;
     height: 650px;
+    overflow: hidden;
 }
 
 .welcome article {
@@ -271,10 +272,12 @@ nav {
     z-index: 1;
 }
 .coin {
-    width: 1250px;
+    width: 100%;
+    max-width: 1250px;
     margin: auto;
     background-color: #ecf0f3cc;
     border-radius: 100px;
+    
 }
 .coin .coin-content {
     max-width: 1150px;
@@ -417,13 +420,15 @@ nav {
     margin-top: 2rem;
 }
 .table {
-    width: 1150px;
+    width: 100%;
+    max-width:1150px ;
     margin: 2rem auto;
     display: flex;
     justify-content: center;
     border: 5px solid rgba(0,136,204,0.06);
     border-radius: 75px;
    padding: 25px 110px;
+   overflow: hidden;
 }
 .table table {
     
